# sdos

./: .gitignore  API.md  LICENSE  README.md
sdos_c_lib/: .gitignore  CMakeLists.txt  sdos.c  sdos.h
sdos_lib/: library.c  library.h
sdos_management/: .gitignore  README.md  api_test.sh  app.py  config.ini  create_deb.sh  persistence.py  requirements.txt  sdos.service  sdos_user.service  setup.py
sdos_management/sdos-gui/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
sdos_management/sdos-gui/e2e/src/: app.e2e-spec.ts
sdos_management/sdos-gui/src/: index.html  styles.scss
sdos_management/sdos-gui/src/app/: api.service.ts  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
sdos_management/sdos-gui/src/app/collection/: collection.component.html  collection.component.scss  collection.component.ts
sdos_management/sdos-gui/src/app/collection-picker/: collection-picker.component.html  collection-picker.component.ts
sdos_management/sdos-gui/src/app/entry/: entry.component.html  entry.component.scss  entry.component.ts
sdos_management/templates/: detail.html  list.html
sdos_python_lib/: README.md  publish-library.sh  setup.py
sdos_python_lib/sdos/: api.py
sdos_python_lib_test/: main.py
sdos_test/: CMakeLists.txt  main.c
